--- a/style.css
+++ b/style.css
@@ -27,6 +27,6 @@ Template: breek
 .gb-cta-image-wrap {
 	background: #000;
 }
-.wp-block-genesis-blocks-gb-accordion .gb-block-accordion {
+.gb-block-accordion {
 	cursor: pointer;
 }
